# pytest-in-docker

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  main.py  pyproject.toml
.claude/: settings.json
.cursor/: hooks.json
.github/workflows/: agentblame.yml  ci.yml  publish.yml
.opencode/plugin/: agentblame.ts
pytest_in_docker/: __init__.py  _container.py  _decorator.py  _plugin.py  _types.py
pytest_inside_docker/: __init__.py  _container.py  _decorator.py  _types.py
tests/: __init__.py  test_class_support.py  test_cloudpickle.py  test_debian.py  test_decorator_factory.py  test_echo.py  test_mark.py  test_types.py
tests/dockerfiles/debian-bookworm-slim/: Dockerfile
