[project]
name = "pytest-inside-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "rpyc>=6.0.2",
    "testcontainers>=4.14.1",
]

[project.entry-points.pytest11]
inside_docker = "pytest_inside_docker"


[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false

