[project]
name = "pytest-inside-docker"
version = "0.1.0"
description = "Seamlessly run pytest tests inside docker containers"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "rpyc>=6.0.2",
    "testcontainers>=4.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.pytest11]
inside_docker = "pytest_inside_docker"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S", # It's tests, no need for security
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false

