[project]
name = "pytest-in-docker"
version = "0.2.1"
description = "Seamlessly run pytest tests inside docker containers"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Marko", email = "marko@mesa.dev" },
]
keywords = ["pytest", "docker", "testing", "containers", "isolation", "pytest-plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "cloudpickle>=3.1.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.5.0",
    "rpyc>=6.0.2",
    "testcontainers>=4.14.1",
]

[project.urls]
Homepage = "https://github.com/mesa-dot-dev/pytest-in-docker"
Repository = "https://github.com/mesa-dot-dev/pytest-in-docker"
Issues = "https://github.com/mesa-dot-dev/pytest-in-docker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.pytest11]
in_docker = "pytest_in_docker._plugin"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with formatter
    "D203", # Conflicts with D211 which is better
    "D213", # Conflicts with D212 which is better
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D", # Test helpers don't need docstrings
    "PLR2004", # Magic values are fine in test assertions
    "S", # It's tests, no need for security
    "PLC0415", # imports need to be late for pytest_in_docker to work.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
addopts = "-n auto"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]

